# Final_Year_Project_2526

./: .gitignore  README.md
proof_of_concept/: hamiltonian_utils.py  main.py  partitioning.py  pyproject.toml
proof_of_concept/partitioning/: partitioning_algorithms.py  partitioning_utils.py
proof_of_concept/permutation/: permutation_algorithm.py  permutation_utils.py
proof_of_concept/trs/: trs_algorithm.py
proof_of_concept/z2_symmetries/: z2_sym_algorithm.py  z2_sym_utils.py
writings/: .gitignore
writings/Maths for Hamiltonian Decomposition Workflow/: figure.tex  main.tex  sources.bib
