[project]
name = "proof-of-concept"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "pennylane>=0.42.3",
    "qiskit>=2.2.3",
    "qiskit-algorithms>=0.4.0",
    "scienceplots>=2.1.1",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a25",
]
